--- a/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
@@ -12,7 +12,8 @@
         android:id="@+id/telefono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/llamar"
@@ -21,5 +22,21 @@
         android:layout_gravity="center_horizontal"
         android:text="Llamar" />
 
+
+    <EditText
+        android:id="@+id/mensaje"
+        android:hint="Enter message"
+        android:inputType="textCapSentences|textMultiLine"
+        android:maxLength="2000"
+        android:maxLines="12"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/enviarMensaje"
+        android:layout_gravity="center_horizontal"
+        android:text="Enviar SMS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
