--- a/ExpertTire/app/src/main/res/menu/principal.xml
+++ b/ExpertTire/app/src/main/res/menu/principal.xml
@@ -19,6 +19,11 @@
         app:showAsAction="never"/>
 
     <item
+        android:id="@+id/menu_foto_pedido"
+        android:title="Solicitar Pedido"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/menu_delivery"
         android:title="Delivery"
         app:showAsAction="never"/>
@@ -30,10 +35,7 @@
 
 
 
-    <item
-        android:id="@+id/menu_pedido"
-        android:title="Solicitar Pedido"
-        app:showAsAction="never"/>
+
 
     <item
         android:id="@+id/menu_comprar"
