Foto Pedido grabar y obtener imagen

--- a/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
@@ -25,7 +25,7 @@
 
     <EditText
         android:id="@+id/mensaje"
-        android:hint="Enter message"
+        android:hint="Ingresar mensaje"
         android:inputType="textCapSentences|textMultiLine"
         android:maxLength="2000"
         android:maxLines="12"
