Notificaciones listado, sin notificacion push

--- a/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_contactanos.xml
@@ -8,6 +8,10 @@
     tools:context=".ContactanosActivity">
 
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="67dp" />
+
     <TextView
         android:id="@+id/telefono"
         android:layout_width="match_parent"
