--- a/ExpertTire/app/src/main/res/layout/activity_login.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,8 @@
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        android:text="12345"/>
 
     <Button
         android:id="@+id/login"
