--- a/ExpertTire/app/src/main/res/menu/principal.xml
+++ b/ExpertTire/app/src/main/res/menu/principal.xml
@@ -5,23 +5,27 @@
     <item
         android:id="@+id/menu_bienvenida"
         android:title="Bienvenida"
+        android:icon="@drawable/user"
         app:showAsAction="always"/>
 
 
     <item
         android:id="@+id/menu_punto_venta"
         android:title="Ubicanos"
-        app:showAsAction="never"/>
+        android:icon="@drawable/ubicanos"
+        app:showAsAction="always"/>
 
     <item
-        android:id="@+id/menu_contactenos"
-        android:title="Contactenos"
-        app:showAsAction="never"/>
+        android:id="@+id/menu_preferencias"
+        android:title="Preferencias"
+        android:icon="@drawable/preferencias"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_foto_pedido"
         android:title="Solicitar Pedido"
-        app:showAsAction="never"/>
+        android:icon="@drawable/cart"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/menu_notificaciones"
@@ -29,8 +33,8 @@
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/menu_preferencias"
-        android:title="Preferencias"
+        android:id="@+id/menu_contactenos"
+        android:title="Contactenos"
         app:showAsAction="never"/>
 
     <item
