--- a/ExpertTire/app/src/main/res/layout/activity_bienvenida.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_bienvenida.xml
@@ -7,13 +7,26 @@
     tools:context=".BienvenidaActivity">
 
     <TextView
-        android:id="@+id/nombre"
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="264dp"
-        android:text=""
+        android:layout_marginTop="44dp"
+        android:text="EXPERT TIRE"
+        android:textSize="20dp"
+        android:textColor="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/nombre"
+        android:layout_width="47dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="412dp"
+        android:text=""
+        android:textColor="@color/cardview_light_background"
+        android:textSize="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,7 +34,7 @@
         android:id="@+id/foto_perfil"
         android:layout_width="153dp"
         android:layout_height="142dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="112dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,10 +44,11 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="48dp"
         android:onClick="cambiarFoto"
-        android:text="Cambiar"
+        android:text="Cambiar Foto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foto_perfil" />
 </androidx.constraintlayout.widget.ConstraintLayout>
