--- a/ExpertTire/app/src/main/res/layout/activity_foto_pedido.xml
+++ b/ExpertTire/app/src/main/res/layout/activity_foto_pedido.xml
@@ -12,6 +12,7 @@
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:text="Solicitar Pedido"
         android:textAlignment="center"
         android:textSize="25dp"
